# Car-parts-Market-Research

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_WEB.md  config.yaml  debug_json_structure.py  debug_selectors.py  docker-compose.yml  main.py  main_torob_cli.py  pyproject.toml  requirements.txt  setup.py  test_imports.py  test_web_interface.py  verify_urls.py  web_app.py
.github/workflows/: ci.yml  release.yml
adapters/: __init__.py  torob_search.py
core/: __init__.py  cache_manager.py  cli_enhancer.py  config_manager.py  dedupe.py  entity_normalizer.py  exporter.py  exporter_excel.py  filtering.py  parallel_processor.py  pipeline.py  pipeline_torob.py  progress_tracker.py
scripts/: setup_github.sh
static/: script.js  style.css
templates/: base.html  index.html
tests/: test_utils.py
utils/: __init__.py  text.py
